# rosa

./: DESCRIPTION  NAMESPACE  README.md
R/: RcppExports.R  binsearch.R  dvts_a.R  dvts_b.R  euclidean.R  exps.R  gibbs.R  oddcount.R  randomwalk.R  rosa.R
old/: cfg_plot.R  known_fn.cpp  no_analysis.cpp  static_analysis.R  static_analysis.cpp  static_analysis.h
src/: Ast.cpp  Ast.hpp  AstPrinter.hpp  AstRule.hpp  AstTransforms.cpp  AstTransforms.hpp  CMakeLists.txt  Cfg.cpp  Cfg.hpp  CfgAnalysis.hpp  Codegen.cpp  Codegen.hpp  CodegenRules.cpp  CodegenRules.hpp  DebugUtil.cpp  DebugUtil.hpp  HashUtil.hpp  KnownFunctions.cpp  KnownFunctions.hpp  Macros.hpp  Makevars  RcppExports.cpp  ReachingDefinition.cpp  ReachingDefinition.hpp  Rosa.cpp  RosaLib.hpp  TemplateUtil.hpp  Test.cpp  Type.cpp  Type.hpp  TypeInference.cpp  TypeInference.hpp  TypeRules.cpp  TypeRules.hpp  VariableFacts.cpp  VariableFacts.hpp
